--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,8 @@ updates:
   commit-message:
     # Prefix all commit messages with "Changed: "
     prefix: "Changed"
+- package-ecosystem: gradle
+  directory: /
+  schedule:
+    interval: daily
+
